--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@style/BaseTheme"
         android:supportsRtl="true">
         <activity
-            android:name=".ScrollViewActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AutoRefreshActivity"/>
-        <activity android:name=".LoadMoreActivity"/>
-        <activity android:name=".SimpleActivity"/>
-        <activity android:name=".WaveActivity"/>
+        <activity android:name=".ActSimple1"/>
+        <activity android:name=".ActSimple2"/>
+        <activity android:name=".ActSimple3"/>
+        <activity android:name=".ActSimple4"/>
+        <activity android:name=".ActSimple5"/>
+        <activity android:name=".ActSimple6"/>
+        <activity android:name=".ActSimple7"/>
     </application>
 
 </manifest>
